--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
-from selenium import webdriver
-from selenium.webdriver.common.by import By
-from selenium.webdriver.chrome.service import Service
-from webdriver_manager.chrome import ChromeDriverManager
-import time
+import os
+import base64
+import requests
 
-# ===== 사용자 설정 =====
-VIDEO_PATH = r"C:\video\test.mp4"   # 업로드할 영상 경로
-TITLE = "리마 자동화 업로드 테스트"
-DESCRIPTION = "리마가 직접 올린 영상입니다!"
+# ==== 설정 ====
+GITHUB_TOKEN = "여기에_토큰_입력"  # Personal Access Token
+REPO_OWNER = "cu569"
+REPO_NAME = "teacher365-ai"
+BRANCH = "main"
+LOCAL_DIR = r"C:\Users\Park\OneDrive\바탕 화면\webapp"  # 업로드할 로컬 폴더 경로
+COMMIT_MESSAGE = "국민건설연합 자동 업로드"
 
-# ===== 크롬 프로필 경로 (로그인 유지용) =====
-PROFILE_PATH = r"C:\Users\Park\AppData\Local\Google\Chrome\User Data"
+# ==== GitHub API ====
+def upload_folder_to_github():
+    api_url = f"https://api.github.com/repos/{REPO_OWNER}/{REPO_NAME}/contents/"
+    
+    for root, dirs, files in os.walk(LOCAL_DIR):
+        for file_name in files:
+            file_path = os.path.join(root, file_name)
+            rel_path = os.path.relpath(file_path, LOCAL_DIR).replace("\\", "/")
 
-# ===== 크롬 옵션 설정 =====
-options = webdriver.ChromeOptions()
-options.add_argument(f"--user-data-dir={PROFILE_PATH}")
-options.add_argument("--profile-directory=Default")
-options.add_argument("--disable-gpu")
-options.add_argument("--no-sandbox")
+            with open(file_path, "rb") as f:
+                content = base64.b64encode(f.read()).decode()
 
-# ===== 드라이버 실행 =====
-driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)
-driver.get("https://studio.youtube.com/upload")
+            url = api_url + "webapp/" + rel_path
+            data = {
+                "message": COMMIT_MESSAGE,
+                "content": content,
+                "branch": BRANCH
+            }
 
-# ===== 파일 업로드 =====
-time.sleep(5)
-file_input = driver.find_element(By.XPATH, "//input[@type='file']")
-file_input.send_keys(VIDEO_PATH)
+            response = requests.put(url, headers={
+                "Authorization": f"token {GITHUB_TOKEN}",
+                "Accept": "application/vnd.github.v3+json"
+            }, json=data)
 
-# ===== 제목/설명 입력 =====
-time.sleep(2)
-boxes = driver.find_elements(By.ID, "textbox")
-if len(boxes) >= 2:
-    boxes[0].clear()
-    boxes[0].send_keys(TITLE)
-    boxes[1].send_keys(DESCRIPTION)
+            if response.status_code in [200, 201]:
+                print(f"✅ 업로드 성공: {rel_path}")
+            else:
+                print(f"❌ 업로드 실패: {rel_path}, {response.text}")
 
-time.sleep(2)
-print("업로드 자동화 완료!")
+if __name__ == "__main__":
+    upload_folder_to_github()
