--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
   </main>
 
   <footer>
-    <button onclick="quickCmd('유튜브 업로드 따라해')">유튜브 업로드</button>
-    <button onclick="quickCmd('파일 만들기')">파일 만들기</button>
-    <button onclick="quickCmd('영상 분석')">영상 분석</button>
-  </footer>
-
-  <script src="script.js"></script>body {
+    <button onclick="quickCmd('유튜브 업로드 따라해')">유튜브 업로드</button>body {
   margin: 0;
   font-family: 'Pretendard', sans-serif;
   background: #eef2fa;
@@ -82,11 +77,7 @@ header {
   padding: 8px 12px;
   background: #6554c0;
   color: white;
-  border: none;
-  border-radius: 5px;
-}
-footer {
-  display: flex;function sendMessage() {
+  border: none;function sendMessage() {
   const inputBox = document.getElementById("user-input");
   const message = inputBox.value.trim();
   if (!message) return;
@@ -114,6 +105,10 @@ function addMessage(sender, text) {
   chatBox.scrollTop = chatBox.scrollHeight;
 }
 
+  border-radius: 5px;
+}
+footer {
+  display: flex;
   justify-content: space-around;
   background: #f0f0f0;
   padding: 10px;
@@ -126,5 +121,10 @@ footer button {
   border-radius: 5px;
 }
 
+    <button onclick="quickCmd('파일 만들기')">파일 만들기</button>
+    <button onclick="quickCmd('영상 분석')">영상 분석</button>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
