--- a/index.html
+++ b/index.html
@@ -1,33 +1,90 @@
-<script>
-  function sendMessage() {
-    const inputBox = document.getElementById("user-input");
-    const message = inputBox.value.trim();
-    if (!message) return;
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>국민건설연합 플랫폼</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>국민건설연합</h1>
+  </header>
 
-    addMessage("user", message);
-    inputBox.value = "";
+  <main>
+    <nav class="categories">
+      <button onclick="openPage('인력시장')">인력시장</button>
+      <button onclick="openPage('단종업체')">단종업체</button>
+      <button onclick="openPage('장비대여')">장비대여</button>
+      <button onclick="openPage('자재구매')">자재구매</button>
+      <button onclick="openPage('네트워크')">네트워크</button>
+    </nav>
 
-    // AI 응답 시뮬레이션 (나중에 GPT API로 교체 가능)
-    setTimeout(() => {
-      addMessage("bot", `리마: '${message}' 명령을 처리 중입니다.`);
-    }, 500);
-  }
-
-  function addMessage(sender, text) {
-    const chatBox = document.getElementById("chat-box");
-    const div = document.createElement("div");header {
-  position: sticky;
-  top: 0;
+    <section id="content">
+      <p>카테고리를 선택해 세부 정보를 확인하세요.</p>
+    </section>
+  </main>body {
+  margin: 0;
+  font-family: 'Pretendard', sans-serif;
+  background: #eef2fa;
+  color: #333;
 }
 
-.input-box {
-  position: sticky;
-  bottom: 0;
+header {
+  background: #5a4fcf;
+  color: #fff;
+  padding: 15px;
+  text-align: center;
+  font-size: 1.5em;
 }
 
-    div.className = `msg ${sender}`;
-    div.textContent = text;
-    chatBox.appendChild(div);
-    chatBox.scrollTop = chatBox.scrollHeight;
-  }
-</script>
+.categories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+.categories button {
+  flex: 1 1 45%;
+  margin: 5px;
+  padding: 15px;
+  font-size: 1em;
+  background: #6554c0;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.categories button:hover {
+  background: #4e3cb5;
+}
+
+#content {
+  padding: 20px;
+  text-align: center;function openPage(category) {
+  const content = document.getElementById('content');
+  content.innerHTML = `<h2>${category}</h2><p>${category} 관련 정보가 여기에 표시됩니다.</p>`;
+}
+
+  background: #fff;
+  margin: 10px;
+  border-radius: 8px;
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+  font-size: 0.8em;
+  background: #ddd;
+}
+
+
+  <footer>
+    <p>© 2025 국민건설연합 | All Rights Reserved</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
