--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <script src="script.js"></script>
 </body>
-</html>body {
+</html>
+body {
   margin: 0;
   font-family: 'Pretendard', sans-serif;
   background: #eef2fa;
@@ -87,4 +88,3 @@ function openPage(category) {
   const content = document.getElementById('content');
   content.innerHTML = `<h2>${category}</h2><p>${category} 관련 정보가 여기에 표시됩니다.</p>`;
 }
-
