--- a/index.html
+++ b/index.html
@@ -1,90 +1,118 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>국민건설연합</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>리마 AI 메인 상황판</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <h1>국민건설연합</h1>
-  </header>
-
-  <main>
-    <nav class="categories">
-      <button onclick="openPage('인력시장')">인력시장</button>
-      <button onclick="openPage('단종업체')">단종업체</button>
-      <button onclick="openPage('장비대여')">장비대여</button>
-      <button onclick="openPage('자재구매')">자재구매</button>
-      <button onclick="openPage('네트워크')">네트워크</button>
-    </nav>
-
-    <section id="content">
-      <p>카테고리를 선택해 세부 정보를 확인하세요.</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 국민건설연합 | All Rights Reserved</p>
-  </footer>
-
-  <script src="script.js"></script>
+<body class="bg-gradient-to-br from-slate-100 to-indigo-200 min-h-screen">
+  <div class="max-w-xl mx-auto p-4">
+    <h1 class="text-3xl font-bold text-indigo-700 mb-2 mt-4 text-center tracking-tight">리마 AI 메인 상황판</h1>
+    <div class="grid grid-cols-2 gap-4 mt-6">
+      <div onclick="openModal('create')" class="rounded-2xl shadow-xl bg-white p-5 flex flex-col items-center cursor-pointer hover:scale-105 transition">
+        <span class="text-2xl mb-2">🪄</span>
+        <span class="font-bold text-lg mb-1">리마 생성/관리</span>
+        <span class="text-gray-500 text-sm">무한 리마, 일괄/상세 관리</span>
+      </div>
+      <div onclick="openModal('leader')" class="rounded-2xl shadow-xl bg-white p-5 flex flex-col items-center cursor-pointer hover:scale-105 transition">
+        <span class="text-2xl mb-2">🛡️</span>
+        <span class="font-bold text-lg mb-1">리더 리마 승인</span>
+        <span class="text-gray-500 text-sm">10개 초과시 지문인증 승인</span>
+      </div>
+      <div onclick="openModal('log')" class="rounded-2xl shadow-xl bg-white p-5 flex flex-col items-center cursor-pointer hover:scale-105 transition">
+        <span class="text-2xl mb-2">📊</span>
+        <span class="font-bold text-lg mb-1">상황판/로그</span>
+        <span class="text-gray-500 text-sm">집계, 기록, 이력 실시간</span>
+      </div>
+      <div onclick="openModal('chat')" class="rounded-2xl shadow-xl bg-white p-5 flex flex-col items-center cursor-pointer hover:scale-105 transition">
+        <span class="text-2xl mb-2">💬</span>
+        <span class="font-bold text-lg mb-1">채팅/알림/보고</span>
+        <span class="text-gray-500 text-sm">명령, 승인, 실시간 대화</span>
+      </div>
+    </div>
+    <div class="mt-8 mb-2 px-4 py-2 bg-white rounded-xl shadow text-center text-indigo-700 font-semibold">
+      <span id="mainStatus">현재 리더 리마: 10개 | 승인대기: 1건</span>
+    </div>
+    <div id="modalBG" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-40 hidden">
+      <div id="modal" class="bg-white rounded-2xl shadow-2xl p-6 w-[94vw] max-w-md relative animate-fadeIn">
+        <button onclick="closeModal()" class="absolute top-3 right-4 text-2xl text-gray-400 hover:text-indigo-500">&times;</button>
+        <div id="modalContent"></div>
+      </div>
+    </div>
+  </div>
+  <script>
+    let leaderCount = 10;
+    let approveWaiting = 1;
+    let logs = [
+      "리더 리마 10개 자동 생성 완료",
+      "11번째 리더 리마 승인 요청(지문 인증)",
+      "승인 대기중..."
+    ];
+    let chatlog = [
+      "[알림] 리더 리마 10개 초과 승인 필요",
+      "[상황] 관리자 승인/거부 모두 기록됨"
+    ];
+    function openModal(type) {
+      let html = "";
+      if(type==="create") {
+        html = `
+        <h2 class="text-xl font-bold mb-2 text-indigo-700">🪄 리마 생성/관리</h2>
+        <p class="mb-4 text-gray-700">여기서 리마를 무한 생성/삭제/상태 관리 가능합니다.</p>
+        <button class="w-full py-2 bg-indigo-600 text-white font-semibold rounded-xl hover:bg-indigo-700 mb-2" onclick="alert('새 리마 생성!')">새 리마 생성</button>
+        <button class="w-full py-2 bg-indigo-50 text-indigo-600 font-semibold rounded-xl border border-indigo-200 hover:bg-indigo-100" onclick="alert('리마 상태 보기')">상세 보기</button>
+        `;
+      }
+      if(type==="leader") {
+        html = `
+        <h2 class="text-xl font-bold mb-2 text-indigo-700">🛡️ 리더 리마 승인</h2>
+        <p class="mb-3 text-gray-700">10개 초과시 지문인증 승인만 가능합니다.</p>
+        <div class="mb-4">
+          <span class="font-semibold text-gray-700">현재 리더 리마:</span> ${leaderCount}개 <br>
+          <span class="font-semibold text-gray-700">승인 대기:</span> ${approveWaiting}건
+        </div>
+        <button class="w-full py-2 bg-emerald-600 text-white font-semibold rounded-xl hover:bg-emerald-700 mb-3" onclick="fingerApprove()">지문인증 승인하기</button>
+        `;
+      }
+      if(type==="log") {
+        html = `
+        <h2 class="text-xl font-bold mb-2 text-indigo-700">📊 상황판/로그</h2>
+        <ul class="list-disc ml-4 mb-2">
+          ${logs.map(l=>`<li class="text-gray-700 mb-1">${l}</li>`).join("")}
+        </ul>
+        <button class="w-full py-2 bg-indigo-50 text-indigo-600 font-semibold rounded-xl border border-indigo-200 hover:bg-indigo-100" onclick="alert('로그 다운로드')">전체 로그 다운로드</button>
+        `;
+      }
+      if(type==="chat") {
+        html = `
+        <h2 class="text-xl font-bold mb-2 text-indigo-700">💬 채팅/알림/보고</h2>
+        <div class="mb-2 text-gray-700">명령, 승인, 시스템 상태, 알림 등 실시간 대화 지원</div>
+        <div class="bg-slate-100 rounded p-3 mb-3 h-28 overflow-y-auto">
+          ${chatlog.map(m=>`<div>${m}</div>`).join("")}
+        </div>
+        <textarea class="w-full rounded p-2 border mb-2" placeholder="GPT+리마에게 명령 입력"></textarea>
+        <button class="w-full py-2 bg-indigo-600 text-white font-semibold rounded-xl hover:bg-indigo-700">명령 전송</button>
+        `;
+      }
+      document.getElementById('modalContent').innerHTML = html;
+      document.getElementById('modalBG').classList.remove('hidden');
+    }
+    function closeModal() { document.getElementById('modalBG').classList.add('hidden'); }
+    function fingerApprove() {
+      let ok = confirm("지문 인증 성공 처리 (실제 WebAuthn 연동)");
+      if(ok) {
+        leaderCount++;
+        approveWaiting = Math.max(0, approveWaiting-1);
+        logs.unshift(`지문 인증 승인, 리더 리마 ${leaderCount}개`);
+        chatlog.unshift(`[알림] ${leaderCount}번째 리더 리마 승인!`);
+        document.getElementById('mainStatus').innerText = `현재 리더 리마: ${leaderCount}개 | 승인대기: ${approveWaiting}건`;
+        closeModal();
+        alert('승인 완료! 상황판에 반영됩니다.');
+      } else {
+        logs.unshift('지문 인증 거부됨!');
+        closeModal();
+      }
+    }
+  </script>
 </body>
 </html>
-body {
-  margin: 0;
-  font-family: 'Pretendard', sans-serif;
-  background: #eef2fa;
-  color: #333;
-}
-
-header {
-  background: #5a4fcf;
-  color: #fff;
-  padding: 15px;
-  text-align: center;
-  font-size: 1.5em;
-}
-
-.categories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 10px;
-}
-
-.categories button {
-  flex: 1 1 45%;
-  margin: 5px;
-  padding: 15px;
-  font-size: 1em;
-  background: #6554c0;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.categories button:hover {
-  background: #4e3cb5;
-}
-
-#content {
-  padding: 20px;
-  text-align: center;
-  background: #fff;
-  margin: 10px;
-  border-radius: 8px;
-}
-
-footer {
-  text-align: center;
-  padding: 10px;
-  font-size: 0.8em;
-  background: #ddd;
-}
-function openPage(category) {
-  const content = document.getElementById('content');
-  content.innerHTML = `<h2>${category}</h2><p>${category} 관련 정보가 여기에 표시됩니다.</p>`;
-}
