--- a/index.html
+++ b/index.html
@@ -4,139 +4,101 @@
   <meta charset="UTF-8">
   <title>국민건설연합 메인 상황판</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <style>
-    body { font-family: 'Pretendard', sans-serif; background: #eef2fa; margin:0; }
-    .wrap { max-width:420px; margin:30px auto; background:white; border-radius:20px; box-shadow:0 3px 15px #b7c3ea55; padding:28px 18px 20px; }
-    h2 { color:#5a4fcf; text-align:center; margin-bottom:18px; font-size:1.5em; letter-spacing:-1px;}
-    .menu { display:flex; flex-wrap:wrap; gap:7px; margin-bottom:20px;}
-    .menu button {flex:1 1 45%; background:#e8e8fa; color:#5d57b3; border:none; border-radius:8px; padding:10px 0; font-weight:600; font-size:1em; cursor:pointer;}
-    .menu button.active {background:#5a4fcf; color:white;}
-    .chatbox {min-height:150px; background:#f5f7ff; border-radius:11px; margin-bottom:12px; padding:14px 11px; font-size:1.08em;}
-    .msg-bot {margin-bottom:10px;}
-    .msg-me {margin-bottom:7px; text-align:right;}
-    .msg-bot span {color:#5a4fcf; font-weight:600;}
-    .msg-me span {color:#333; font-weight:500;}
-    .inputbar {display:flex; gap:7px; margin-bottom:0;}
-    .inputbar input {flex:1; padding:11px; border-radius:9px; border:1px solid #cdd6ee; font-size:1em;}
-    .inputbar button {padding:0 23px; border-radius:9px; background:#5a4fcf; color:white; border:none; font-weight:600; font-size:1em; cursor:pointer;}
-    .menu2 {display:flex; gap:7px; margin-top:13px;}
-    .menu2 button {flex:1; background:#f5f7ff; color:#555bb7; border:none; border-radius:8px; padding:9px 0; font-weight:600; cursor:pointer;}
-    .rec {color:#37bb47; font-weight:600;}
-    @media (max-width:500px){
-      .wrap{margin:0; border-radius:0;}
-    }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="wrap">
-    <h2>국민건설연합 메인 상황판</h2>
-    <div class="menu">
-      <button id="btnLabor" class="active">인력시장</button>
-      <button id="btnSubcon">단종업체</button>
-      <button id="btnEquip">장비대여</button>
-      <button id="btnMaterial">자재구매</button>
-      <button id="btnNetwork">네트워크</button>
+<body class="bg-slate-100 min-h-screen flex flex-col">
+  <!-- 상단 헤더 -->
+  <header class="bg-indigo-600 text-white text-center py-4 shadow-md">
+    <h1 class="text-2xl font-bold">국민건설연합 메인 상황판</h1>
+  </header>
+
+  <!-- 카테고리 버튼 -->
+  <div class="flex flex-wrap justify-center gap-3 p-4 bg-white shadow">
+    <button onclick="selectCategory('인력시장')" class="cat-btn">인력시장</button>
+    <button onclick="selectCategory('단종업체')" class="cat-btn">단종업체</button>
+    <button onclick="selectCategory('장비대여')" class="cat-btn">장비대여</button>
+    <button onclick="selectCategory('자재구매')" class="cat-btn">자재구매</button>
+    <button onclick="selectCategory('네트워크')" class="cat-btn">네트워크</button>
+  </div>
+
+  <!-- 상태 패널 -->
+  <div class="bg-white mx-4 mt-4 p-3 rounded-xl shadow text-center text-indigo-700 font-semibold">
+    <span id="statusText">시스템: 건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.</span>
+  </div>
+
+  <!-- 채팅 + 전화 -->
+  <div class="flex-1 flex flex-col max-w-2xl w-full mx-auto mt-4">
+    <!-- 채팅창 -->
+    <div id="chatbox" class="flex-1 bg-white rounded-xl shadow p-4 mb-3 overflow-y-auto">
+      <div class="text-indigo-600 mb-2">시스템: 건설 상황판 초기화 완료.</div>
     </div>
-    <div class="chatbox" id="chatbox">
-      <div class="msg-bot"><span>시스템:</span> 건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.</div>
-    </div>
-    <form class="inputbar" onsubmit="sendMsg();return false;">
-      <input id="userInput" autocomplete="off" placeholder="명령 입력 (예: 인력 등록, 장비 요청 등)"/>
-      <button type="submit">전송</button>
+    
+    <!-- 명령 입력 -->
+    <form onsubmit="sendMsg(); return false;" class="flex gap-2 mb-3">
+      <input id="userInput" placeholder="명령 입력 (예: 인력 등록, 장비 요청)" 
+             class="flex-1 border rounded-xl p-2 focus:outline-none focus:ring-2 focus:ring-indigo-400">
+      <button type="submit" class="bg-indigo-600 text-white px-4 rounded-xl font-semibold">전송</button>
     </form>
-    <div class="menu2">
-      <button onclick="downloadLog()">대화 기록 다운로드</button>
-      <button onclick="alert('건설 네트워크 맵은 준비 중입니다')">네트워크 맵</button>
+
+    <!-- 하단 버튼 -->
+    <div class="flex gap-2 justify-between">
+      <button onclick="downloadLog()" class="flex-1 bg-slate-200 py-2 rounded-xl">대화 기록 다운로드</button>
+      <button onclick="callRequest()" class="flex-1 bg-emerald-500 text-white py-2 rounded-xl">전화 요청</button>
     </div>
   </div>
+
+  <!-- 스타일 (버튼 통합 스타일) -->
+  <style>
+    .cat-btn {
+      background:#e0e7ff; color:#4338ca; font-weight:600;
+      padding:10px 20px; border-radius:12px;
+      transition: all 0.2s ease;
+    }
+    .cat-btn:hover { background:#6366f1; color:#fff; }
+  </style>
+
+  <!-- 스크립트 -->
   <script>
-    let mode = "labor";  // 기본 인력시장
-    let step = 0;
-    let chatlog = [
-      {from:'bot', msg:'건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.'}
-    ];
+    let chatlog = ["시스템: 건설 상황판 초기화 완료."];
 
-    // 카테고리 버튼 연결
-    document.getElementById('btnLabor').onclick = function(){
-      mode = "labor"; setActive(this); introChat();
-    }
-    document.getElementById('btnSubcon').onclick = function(){
-      mode = "subcon"; setActive(this); introChat();
-    }
-    document.getElementById('btnEquip').onclick = function(){
-      mode = "equip"; setActive(this); introChat();
-    }
-    document.getElementById('btnMaterial').onclick = function(){
-      mode = "material"; setActive(this); introChat();
-    }
-    document.getElementById('btnNetwork').onclick = function(){
-      mode = "network"; setActive(this); introChat();
+    function updateChatbox() {
+      document.getElementById('chatbox').innerHTML = chatlog.map(msg=>`<div>${msg}</div>`).join('');
+      document.getElementById('chatbox').scrollTop = document.getElementById('chatbox').scrollHeight;
     }
 
-    function setActive(btn){
-      document.querySelectorAll('.menu button').forEach(b=>b.classList.remove('active'));
-      btn.classList.add('active');
-    }
-
-    function introChat(){
-      chatlog = [];
-      if(mode=="labor") chatlog.push({from:'bot', msg:'인력시장: 인력 등록, 매칭, 출근 현황 확인 가능.'});
-      if(mode=="subcon") chatlog.push({from:'bot', msg:'단종업체: 업체 등록 및 공사별 협력 구조 확인.'});
-      if(mode=="equip") chatlog.push({from:'bot', msg:'장비대여: 장비 요청/예약 및 가용 현황 확인.'});
-      if(mode=="material") chatlog.push({from:'bot', msg:'자재구매: 공동구매 및 단가 비교 확인.'});
-      if(mode=="network") chatlog.push({from:'bot', msg:'네트워크: 인근 현장·업체 네트워크 맵 확인.'});
+    function selectCategory(cat) {
+      chatlog.push(`시스템: "${cat}" 카테고리가 선택되었습니다.`);
+      document.getElementById('statusText').textContent = `현재 카테고리: ${cat}`;
       updateChatbox();
     }
 
-    function sendMsg(){
-      let v = document.getElementById('userInput').value.trim();
-      if(!v) return;
-      chatlog.push({from:'me', msg:v});
-      document.getElementById('userInput').value = "";
-      updateChatbox();
-      setTimeout(()=>handleCommand(v), 600);
-    }
-
-    function handleCommand(v){
-      if(mode==="labor"){
-        if(/등록|추가/.test(v)){
-          chatlog.push({from:'bot', msg:`"${v}" 인력을 등록했습니다.`});
-        } else {
-          chatlog.push({from:'bot', msg:`인력시장 명령 처리: "${v}" (예시 응답)`});
-        }
-      }
-      else if(mode==="subcon"){
-        chatlog.push({from:'bot', msg:`단종업체 관련 명령: "${v}" 처리 완료.`});
-      }
-      else if(mode==="equip"){
-        chatlog.push({from:'bot', msg:`장비대여 요청: "${v}" 예약 처리.`});
-      }
-      else if(mode==="material"){
-        chatlog.push({from:'bot', msg:`자재구매 요청: "${v}" 견적 진행.`});
-      }
-      else if(mode==="network"){
-        chatlog.push({from:'bot', msg:`네트워크 요청: "${v}" 위치/연결 확인.`});
-      }
+    function sendMsg() {
+      const input = document.getElementById('userInput');
+      const msg = input.value.trim();
+      if(!msg) return;
+      chatlog.push(`나: ${msg}`);
+      chatlog.push(`리마: "${msg}" 요청이 접수되었습니다. 처리 중입니다...`);
+      input.value = '';
       updateChatbox();
     }
 
-    function updateChatbox(){
-      let html = '';
-      chatlog.forEach(row=>{
-        if(row.from==='bot') html += `<div class="msg-bot"><span>시스템:</span> ${row.msg}</div>`;
-        else html += `<div class="msg-me"><span>나:</span> ${row.msg}</div>`;
-      });
-      document.getElementById('chatbox').innerHTML = html;
+    function downloadLog() {
+      const blob = new Blob([chatlog.join('\n')], { type: 'text/plain' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'construction_chat_log.txt';
+      a.click();
+      URL.revokeObjectURL(url);
     }
 
-    function downloadLog(){
-      let txt = chatlog.map(r=>(r.from==='bot'?'시스템: ':'나: ')+r.msg.replace(/<[^>]+>/g,'')).join('\n');
-      let blob = new Blob([txt],{type:'text/plain'});
-      let url = URL.createObjectURL(blob);
-      let a = document.createElement('a');
-      a.href=url; a.download='건설_상황판_대화기록.txt'; a.click();
-      setTimeout(()=>URL.revokeObjectURL(url), 1000);
+    function callRequest() {
+      alert("전화 요청이 전송되었습니다! 상대방 승인 시 연결됩니다. (WebRTC 연동 예정)");
+      chatlog.push("시스템: 전화 요청이 전송되었습니다.");
+      updateChatbox();
     }
+
+    updateChatbox();
   </script>
 </body>
 </html>
