--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-100 min-h-screen flex flex-col">
-  <!-- 상단 헤더 -->
+  <!-- 헤더 -->
   <header class="bg-indigo-600 text-white text-center py-4 shadow-md">
     <h1 class="text-2xl font-bold">국민건설연합 메인 상황판</h1>
   </header>
@@ -21,21 +21,25 @@
     <button onclick="selectCategory('네트워크')" class="cat-btn">네트워크</button>
   </div>
 
-  <!-- 상태 패널 -->
-  <div class="bg-white mx-4 mt-4 p-3 rounded-xl shadow text-center text-indigo-700 font-semibold">
-    <span id="statusText">시스템: 건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.</span>
+  <!-- 상태 안내 -->
+  <div id="statusText" class="bg-white mx-4 mt-3 p-3 rounded-xl shadow text-center text-indigo-700 font-semibold">
+    시스템: 카테고리를 선택하세요.
   </div>
 
-  <!-- 채팅 + 전화 -->
-  <div class="flex-1 flex flex-col max-w-2xl w-full mx-auto mt-4">
-    <!-- 채팅창 -->
+  <!-- 세부 메뉴 영역 -->
+  <div id="subMenu" class="bg-white mx-4 mt-2 p-3 rounded-xl shadow hidden">
+    <h2 id="subTitle" class="text-lg font-bold text-indigo-700 mb-2"></h2>
+    <div id="subButtons" class="grid grid-cols-2 gap-2"></div>
+  </div>
+
+  <!-- 채팅 -->
+  <div class="flex-1 flex flex-col max-w-2xl w-full mx-auto mt-3">
     <div id="chatbox" class="flex-1 bg-white rounded-xl shadow p-4 mb-3 overflow-y-auto">
-      <div class="text-indigo-600 mb-2">시스템: 건설 상황판 초기화 완료.</div>
+      <div class="text-indigo-600 mb-2">시스템: 상황판 초기화 완료.</div>
     </div>
-    
-    <!-- 명령 입력 -->
+
     <form onsubmit="sendMsg(); return false;" class="flex gap-2 mb-3">
-      <input id="userInput" placeholder="명령 입력 (예: 인력 등록, 장비 요청)" 
+      <input id="userInput" placeholder="명령 입력 (예: 장비 요청, 인력 등록)"
              class="flex-1 border rounded-xl p-2 focus:outline-none focus:ring-2 focus:ring-indigo-400">
       <button type="submit" class="bg-indigo-600 text-white px-4 rounded-xl font-semibold">전송</button>
     </form>
@@ -44,10 +48,11 @@
     <div class="flex gap-2 justify-between">
       <button onclick="downloadLog()" class="flex-1 bg-slate-200 py-2 rounded-xl">대화 기록 다운로드</button>
       <button onclick="callRequest()" class="flex-1 bg-emerald-500 text-white py-2 rounded-xl">전화 요청</button>
+      <button onclick="openMap()" class="flex-1 bg-indigo-400 text-white py-2 rounded-xl">네트워크 맵</button>
     </div>
   </div>
 
-  <!-- 스타일 (버튼 통합 스타일) -->
+  <!-- 버튼 스타일 -->
   <style>
     .cat-btn {
       background:#e0e7ff; color:#4338ca; font-weight:600;
@@ -55,11 +60,26 @@
       transition: all 0.2s ease;
     }
     .cat-btn:hover { background:#6366f1; color:#fff; }
+    .sub-btn {
+      background:#f1f5f9; padding:10px; border-radius:8px;
+      text-align:center; font-weight:600; color:#334155;
+      border:1px solid #cbd5e1; transition:0.2s;
+    }
+    .sub-btn:hover { background:#e0e7ff; color:#4338ca; }
   </style>
 
   <!-- 스크립트 -->
   <script>
-    let chatlog = ["시스템: 건설 상황판 초기화 완료."];
+    let chatlog = ["시스템: 상황판 초기화 완료."];
+
+    // 카테고리별 세부 메뉴 정의
+    const menuData = {
+      "인력시장": ["인력 등록", "인력 요청", "출근 확인", "계약 현황"],
+      "단종업체": ["업체 등록", "입찰 요청", "협력사 리스트", "실적 확인"],
+      "장비대여": ["장비 요청", "장비 예약", "가용 현황", "반납 처리"],
+      "자재구매": ["자재 요청", "재고 확인", "구매 내역", "납품 일정"],
+      "네트워크": ["현장 지도", "연락망 조회", "위급 알림", "실시간 공정"]
+    };
 
     function updateChatbox() {
       document.getElementById('chatbox').innerHTML = chatlog.map(msg=>`<div>${msg}</div>`).join('');
@@ -67,8 +87,27 @@
     }
 
     function selectCategory(cat) {
-      chatlog.push(`시스템: "${cat}" 카테고리가 선택되었습니다.`);
-      document.getElementById('statusText').textContent = `현재 카테고리: ${cat}`;
+      document.getElementById('statusText').textContent = `시스템: ${cat} 선택됨`;
+      document.getElementById('subMenu').classList.remove('hidden');
+      document.getElementById('subTitle').textContent = `${cat} 메뉴`;
+
+      const btnContainer = document.getElementById('subButtons');
+      btnContainer.innerHTML = '';
+      menuData[cat].forEach(item=>{
+        const btn = document.createElement('button');
+        btn.textContent = item;
+        btn.className = 'sub-btn';
+        btn.onclick = ()=>handleSubMenu(cat, item);
+        btnContainer.appendChild(btn);
+      });
+
+      chatlog.push(`시스템: "${cat}" 카테고리가 열렸습니다.`);
+      updateChatbox();
+    }
+
+    function handleSubMenu(cat, item) {
+      chatlog.push(`나: ${cat} - ${item} 선택`);
+      chatlog.push(`리마: "${item}" 요청 접수됨. 처리 중입니다...`);
       updateChatbox();
     }
 
@@ -77,7 +116,7 @@
       const msg = input.value.trim();
       if(!msg) return;
       chatlog.push(`나: ${msg}`);
-      chatlog.push(`리마: "${msg}" 요청이 접수되었습니다. 처리 중입니다...`);
+      chatlog.push(`리마: "${msg}" 요청이 처리됩니다.`);
       input.value = '';
       updateChatbox();
     }
@@ -94,8 +133,12 @@
 
     function callRequest() {
       alert("전화 요청이 전송되었습니다! 상대방 승인 시 연결됩니다. (WebRTC 연동 예정)");
-      chatlog.push("시스템: 전화 요청이 전송되었습니다.");
+      chatlog.push("시스템: 전화 요청 전송됨.");
       updateChatbox();
+    }
+
+    function openMap() {
+      alert("네트워크 맵이 열립니다. (지도 API 연동 예정)");
     }
 
     updateChatbox();
